--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>About Us</title>
         <link href="css/bootstrap.css" rel="stylesheet">
         <meta name="viewpot" content="width=device-width, initial-scale=1.0">
-        <link rel='stylesheet' type='text/css' href='main.css'>
+        <link href="../css/main.css" rel="stylesheet" type="text/css">
 
     </head>
 
