Testing file uploads

--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 
 <head>
   <title>Ethical Hackers</title>
-  <link rel="stylesheet" href="css/main.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.css" rel="stylesheet">
+  <link rel='stylesheet' type='text/css' href='main.css'>
+  <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
 </head>
 
 <body>
@@ -80,6 +81,7 @@
     <p>We are a group of 3 students from The University of Southampton who want to encourage the public to realise the impact everyday lives have on the environment! Here we show our top tips to reduce, reuse and recycle. Everyone can make a difference. Conserving energy is an essential part in combating climate change to protect the future of our planet.</p>
     <button>Like</button>
   </article>
+
   <article>
     <h2>Plastic</h2>
     <p>The use of plastic has seemed to have forced itself on our society. Here are our top 10 tips to reducing your plastic consumption:</p>
@@ -97,6 +99,7 @@
       </ol>
     <button>Like</button>
   </article>
+
   <article>
     <h2>Energy</h2>
     <p>Saving energy is quick and easy with a Smart Meter. Every household can get one installed for free by your energy provider! A smart meter allows you to see how much energy you are using in terms of pounds and pence, allowing to save moeny as well as protecting the environment! Reduce your household costs by unplugging unused appliances and switching off lights today!</p>
