--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 
 <head>
   <title>Ethical Hackers</title>
-  <link rel="stylesheet" href="css/main.css" type="text/css">
+  <link rel='stylesheet' type='text/css' href='main.css'>
+  <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.css" rel="stylesheet">
 </head>
