--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
   <title>Ethical Hackers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.css" rel="stylesheet">
-  <link rel='stylesheet' type='text/css' href='main.css'>
-  <link type="text/css" rel="stylesheet" href="stylesheets/main.css" />
+  <link href="../css/main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
