--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Ethical Hackers</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="../css/main.css" rel="stylesheet" type="text/css">
+  <link href="main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
