--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 
 <head>
   <title>Ethical Hackers</title>
+    <link type="text/css" rel="stylesheet" href="css/main.css" />
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.css" rel="stylesheet">
-  <link href="main.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
