--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <title>Ethical Hackers</title>
-    <link type="text/css" rel="stylesheet" href="hello-world/css/main.css"/>
+    <link type="text/css" rel="stylesheet" href="css/main.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="css/bootstrap.css" rel="stylesheet">
 </head>
