--- a/about.html
+++ b/about.html
@@ -18,10 +18,10 @@
 
       <div class = "fixedNavbar">
         <ul>
-          <li><a href = "#Home">Home</a></li>
+          <li><a href = "#Home</a></li>
           <li><a href = "#Articles">Articles</a></li>
           <li><a href = "#Contact">Contact</a></li>
-          <li><a href = "#About">About</a></li>
+          <li><a href = "/about.html">About</a></li>
         </ul>
       </div>
 
