--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
           <li><a href = "#Home</a></li>
           <li><a href = "#Articles">Articles</a></li>
           <li><a href = "#Contact">Contact</a></li>
-          <li><a href = "/about.html">About</a></li>
+          <li><a href = "#About.html">About</a></li>
         </ul>
       </div>
 
