--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <title>Ethical Hackers</title>
   <link rel="stylesheet" href="css/main.css" type="text/css">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="./css/bootstrap.css" rel="stylesheet">
+  <link href="css/bootstrap.css" rel="stylesheet">
 </head>
 
 <body>
