--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 
     <head>
         <title>Get In Touch</title>
-        <link href="css/bootstrap.css" rel="stylesheet">
+        <link rel="stylesheet" href="css/about.css" type="text/css">
         <meta name="viewpot" content="width=device-width, initial-scale=1.0">
         <link rel='stylesheet' type='text/css' href='contact.css'>
     </head>
