--- a/contact.html
+++ b/contact.html
@@ -2,9 +2,8 @@
 
     <head>
         <title>Get In Touch</title>
-        <link rel="stylesheet" href="css/about.css" type="text/css">
+        <link rel="stylesheet" href="css/contact.css" type="text/css">
         <meta name="viewpot" content="width=device-width, initial-scale=1.0">
-        <link rel='stylesheet' type='text/css' href='contact.css'>
     </head>
 
     <div class='thankYou'>
