--- a/about.html
+++ b/about.html
@@ -3,13 +3,9 @@
 
     <head>
         <title>About Us</title>
-        <link href="css/bootstrap.css" rel="stylesheet">
-        <meta name="viewpot" content="width=device-width, initial-scale=1.0">
-      <!-- Old .css
-        <link rel='stylesheet' type='text/css' href='about.css'>
-    -->
-        <link href="../css/about.css" rel="stylesheet" type="text/css">
-
+          <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+          <meta name="viewport" content="width=device-width, initial-scale=1">
+          <link rel="stylesheet" href="css/about.css" type="text/css">
     </head>
 
   <body>
