--- a/about.html
+++ b/about.html
@@ -14,10 +14,10 @@
 
       <div class = "fixedNavbar">
         <ul>
-          <li><a href = "#Home</a></li>
+          <li><a href = "index.html">Home</a></li>
           <li><a href = "#Articles">Articles</a></li>
-          <li><a href = "#Contact">Contact</a></li>
-          <li><a href = "#About.html">About</a></li>
+          <li><a href = "about.html">About</a></li>
+          <li><a href = "contact.html">Contact</a></li>
         </ul>
       </div>
 
