--- a/about.html
+++ b/about.html
@@ -41,17 +41,17 @@
 
         <div class='row'>
           <div class="col-xs-4">
-            <img src="./Lucy.jpg" class='img-responsive img-circle'>
+            <img src="./css/Lucy.jpg" class='img-responsive img-circle'>
             <p>Lucy studies Marine Biology with Oceanography at the University of Southampton.</p>
           </div>
 
           <div class="col-xs-4">
-            <img src="./Gemma.jpg" class='img-responsive img-circle'>
+            <img src="./css/Gemma.jpg" class='img-responsive img-circle'>
             <p>Gemma studies Biomedical Sciences at the University of Southampton.</p>
           </div>
 
           <div class="col-xs-4">
-            <img src="./Phoebe.jpg" class='img-responsive img-circle'>
+            <img src="./css/Phoebe.jpg" class='img-responsive img-circle'>
             <p>Phoebe studies English at the University of Southampton.</p>
           </div>
         </div>
