--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,9 @@
 
     <head>
         <title>Get In Touch</title>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/contact.css" type="text/css">
-        <meta name="viewpot" content="width=device-width, initial-scale=1.0">
     </head>
 
     <div class='thankYou'>
